# duneuro-py

./: CMakeLists.txt  LICENSE.md  Makefile.am  README.md  config.h.cmake  configure.ac  dune.module  duneuro-py.pc.in
cmake/modules/: CMakeLists.txt  DuneuroPyMacros.cmake  FindSphinx.cmake  Makefile.am
doc/: CMakeLists.txt  Makefile.am
doc/doxygen/: Doxylocal
doc/sphinx/: CMakeLists.txt  conf.py.in  duneuropy.rst  duneuropy_2d.rst  duneuropy_3d.rst  index.rst
dune/: CMakeLists.txt  Makefile.am
dune/duneuro-py/: CMakeLists.txt  Makefile.am  duneuro-py.hh
duneuro/py/: dipole_statistics.hh  fitted_data.hh  parameter_tree.cc  parameter_tree.h
m4/: CMakeLists.txt  Makefile.am  duneuro-py.m4
src/: CMakeLists.txt  Makefile.am  analyticalMEG.py  duneuro-py.cc  metadict.py
